src/objects/CXE_APA_Agents__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores APA Agents and APA Form URL per APA Scheme.</description>
    <fields>
        <fullName>APA_Form_URL__c</fullName>
        <label>APA Form URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>APA_Name__c</fullName>
        <label>APA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APA_Type__c</fullName>
        <label>APA Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>APA Agents</label>
</CustomObject>